fix hero image being too small on mobile screens

--- a/src/Sections/HomeSection.module.scss
+++ b/src/Sections/HomeSection.module.scss
@@ -26,7 +26,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: min(400px, 25vw);
+	width: clamp(250px, 25vw, 400px);
 	border-radius: 50%;
 	box-shadow: 0 0 0 15px #222, 0 0 5px 30px #555, 0 0 10px 45px #999;
 	aspect-ratio: 1;
